--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -30,27 +30,6 @@
 					</div>
 				</div>
 			</div>
-			<!--Pagination-->
-			<div class="container p-4">
-				<div class="pagination justify-content-center">
-					<span class="step-links">
-					  {% if products.has_previous %}
-						  <a href="?page=1">&laquo; first</a>
-						  <a href="?page={{ products.previous_page_number }}">previous</a>
-					  {% endif %}
-		
-						<span class="current">
-							Page {{ products.number }} of {{ products.paginator.num_pages }}
-						</span>
-		
-					  {% if products.has_next %}
-						  <a href="?page={{ products.next_page_number }}">next</a>
-						  <a href="?page={{ products.paginator.num_pages }}">last &raquo;</a>
-					  {% endif %}
-					</span>
-					</div>
-				</div>
-			  <!--end of Pagination-->
 			{% endfor %}
 			{% if products_filter %}
 				{% for product in products_filter%}
@@ -72,5 +51,29 @@
 				{% endfor %}
 			{% endif %}
 		</div>
+		<!--Pagination-->
+		<div class="row">
+			<div class="col col-sm-5"></div>
+			<div class="col col-mg-3">
+				<div class="pagination">
+					<span class="step-links">
+						{% if products.has_previous %}
+							<a href="?page=1">&laquo; first</a>
+							<a href="?page={{ products.previous_page_number }}">previous</a>
+						{% endif %}
+				
+						<span class="current">
+							Page {{ products.number }} of {{ products.paginator.num_pages }}.
+						</span>
+				
+						{% if products.has_next %}
+							<a href="?page={{ products.next_page_number }}">next</a>
+							<a href="?page={{ products.paginator.num_pages }}">last &raquo;</a>
+						{% endif %}
+					</span>
+				</div>
+			</div>
+		</div>
+		  <!--end of Pagination-->
 	</div>
 {% endblock %}
